fix: fix code btn not showing

--- a/apps/shared/src/components/Home/Chat/markdown.scss
+++ b/apps/shared/src/components/Home/Chat/markdown.scss
@@ -21,40 +21,6 @@
   @include light;
 }
 
-pre {
-  position: relative;
-
-  &:hover .copy-code-button {
-    pointer-events: all;
-    transform: translateX(0px);
-    opacity: 0.5;
-  }
-
-  .copy-code-button {
-    position: absolute;
-    right: 10px;
-    top: 6px;
-    cursor: pointer;
-    padding: 0px 5px;
-    background-color: var(--black);
-    color: var(--white);
-    border: var(--border-in-light);
-    border-radius: 10px;
-    transform: translateX(10px);
-    pointer-events: none;
-    opacity: 0;
-    transition: all ease 0.3s;
-
-    &:after {
-      content: "copy";
-    }
-
-    &:hover {
-      opacity: 1;
-    }
-  }
-}
-
 
 .markdown-body {
   -ms-text-size-adjust: 100%;
@@ -62,6 +28,36 @@ pre {
   margin: 0;
   line-height: 1.5;
   word-wrap: break-word;
+
+  .pre-code {
+    position: relative;
+
+    &:hover .copy-code-button {
+      pointer-events: all;
+      transform: translateX(0px);
+      opacity: 0.5;
+    }
+
+    .copy-code-button {
+      position: absolute;
+      right: 10px;
+      top: 6px;
+      cursor: pointer;
+      padding: 0px 5px;
+      background-color: var(--black);
+      color: var(--white);
+      border: var(--border-in-light);
+      border-radius: 10px;
+      transform: translateX(10px);
+      pointer-events: none;
+      opacity: 0;
+      transition: all ease 0.3s;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
 }
 
 .markdown-body ul,
